static/main.css
@font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu72xKOzY.woff2)
      format("woff2");
    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
      U+FE2E-FE2F;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu5mxKOzY.woff2)
      format("woff2");
    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu7mxKOzY.woff2)
      format("woff2");
    unicode-range: U+1F00-1FFF;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4WxKOzY.woff2)
      format("woff2");
    unicode-range: U+0370-03FF;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu7WxKOzY.woff2)
      format("woff2");
    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
      U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
      U+1EA0-1EF9, U+20AB;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu7GxKOzY.woff2)
      format("woff2");
    unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
      U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
  }
  @font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: url(//fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2)
      format("woff2");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
      U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }
  
  :root {
    --head-color: #262d3d;
    --body-color: #48525c;
    --body-altColor: #767676;
    --body-bg: #fefefe;
    --link-color: #204ecf;
    --link-bg: #204ecf;
    --icon-color: #48525c;
    --icon-alt: #455065;
    --icon-sec: #767676;
    --header-text: #48525c;
    --header-title: 17px;
    --header-bg: #fefefe;
    --header-icon: #262d3d;
    --header-height: 60px;
    --notif-height: 45px;
    --notif-bg: #e1f5fe;
    --notif-color: #01579b;
    --content-bg: #fefefe;
    --content-border: #eceff1;
    --transparent-bg: rgba(0, 0, 0, 0.03);
    --page-maxContent: 780px;
    --post-titleSize: 32px;
    --post-fontSize: 15px;
    --post-titleSizeMobile: 22px;
    --post-fontSizeMobile: 15px;
    --widget-titleSize: 15px;
    --widget-titleWeight: 400;
    --widget-titleAfter: 1px;
    --nav-width: 260px;
    --nav-border: 1px;
    --nav-text: #262d3d;
    --nav-icon: #48525c;
    --nav-bg: #fefefe;
    --font-head: Poppins, sans-serif;
    --font-body: "Noto Sans", sans-serif;
    --font-code: "Fira Mono", monospace;
    --transition-1: all 0.1s ease;
    --transition-2: all 0.2s ease;
    --transition-4: all 0.4s ease;
    --highlight-bg: #f6f6f6;
    --highlight-color: #2f3337;
    --highlight-orange: #b75501;
    --highlight-blue: #015692;
    --highlight-green: #54790d;
    --highlight-red: #f15a5a;
    --highlight-comment: #656e77;
    --dark-text: #fefefe;
    --dark-textAlt: #989b9f;
    --dark-link: #005af0;
    --dark-bg: #1e1e1e;
    --dark-bgAlt: #2d2d30;
    --dark-bgSec: #252526;
  }
  
  body {
      margin: auto;
      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
      overflow: auto;
      background: linear-gradient(315deg, #7311a9 11%, #204ecf 33%, #343fa8 77%);
      animation: gradient 15s ease infinite;
      background-size: 400% 400%;
      background-attachment: fixed;
  }

  
  .itemTitle {
    font-size: 18px;
    margin: 0;
    font-weight: 700;
    font-family: var(--font-head);
    color: #1f1f1f;
  }
  
  .itemDescription {
    text-align: center;
    max-width: 100%;
    margin: 0 auto;
  }
  
  @media only screen and (max-width: 768px) {
    section {
      padding: 50px;
    }
  
    .itemTitle {
      font-size: 15px;
      font-weight: 600;
      color: #1f1f1f;
    }
  
    #reading-key {
      width: 100%;
      max-width: none;
    }
  
    #key {
      width: 40px;
      height: 100px;
    }
  
    #reading-animation {
      width: 120%;
    }
  
    .itemDescription {
      font-size: 14px; 
    }
  }
  
  section {
    background-color: var(--body-bg);
    text-align: center;
    max-width: 100%;
    max-height: 100%;
    width:auto;
    margin: 0 auto;
    padding: 50px;
    box-sizing: border-box;
    position: absolute;
    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    border-radius: 10px;
  }
  
  #reading-key {
    text-align: center;
    max-width: 100%;
    margin: 0 auto;
    position: relative;
    width: 60px;
    text-align: center;
    max-width: 100%;
  }
  
  #key {
    width: 54px;
    height: 145px;
    background: #fefefe;
    position: relative;
    box-shadow: inset 0 0 0 2px #d9d9de, inset 0 0 0 5px #f4f4f5,
      inset 0 -50px 0 0 #f4f4f5;
    -webkit-border-radius: 1px;
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius: 1px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-radius: 1px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
  }
  
  #key::after,
  #key::before,
  #key span::after {
    content: "";
    display: block;
    position: absolute;
  }
  
  #key::after {
    width: 20px;
    height: 20px;
    background: #fff;
    bottom: 15px;
    left: 50%;
    transform: translateX(-50%);
    border-radius: 100%;
    box-shadow: inset 0 0 0 2px #ddd;
  }
  
  #key span {
    position: absolute;
    left: 50%;
    top: 10px;
    transform: translateX(-50%);
  }
  
  #key span,
  #key span::before {
    width: 6px;
    height: 22px;
    background: #e5c499;
    display: block;
    border-radius: 6px;
  }
  
  #key span:nth-of-type(1) {
    margin-left: -5px;
  }
  
  #key span:nth-of-type(2) {
    margin-left: 5px;
  }
  
  #key span::before {
    content: "";
    position: absolute;
    top: 0;
    margin-left: -10px;
  }
  
  #key span:nth-of-type(2)::before {
    margin-left: 10px;
  }
  
  #key span::before {
    content: "";
  }
  
  #reading-animation {
    width: 140%;
    height: 4px;
    border-radius: 4px;
    background: #009de0;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    animation: reading-animation 2s infinite;
    opacity: 0.5;
  }
  
  @keyframes reading-animation {
    0% {
      top: 0%;
      opacity: 0.5;
    }
  
    25%,
    75% {
      opacity: 1;
    }
  
    50% {
      top: 100%;
      opacity: 0.5;
    }
  }
  
  #reading-animation span {
    display: block;
    width: 100%;
    height: 15px;
    background: -moz-linear-gradient(
      top,
      rgba(0, 157, 224, 0) 0%,
      rgba(0, 157, 224, 1) 100%
    );
    background: -webkit-linear-gradient(
      top,
      rgba(0, 157, 224, 0) 0%,
      rgba(0, 157, 224, 1) 100%
    );
    background: linear-gradient(
      to bottom,
      rgba(0, 157, 224, 0) 0%,
      rgba(0, 157, 224, 1) 100%
    );
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00009de0', endColorstr='#009de0', GradientType=0);
    margin-top: 3px;
    opacity: 0.2;
    opacity: 0;
    animation: reading-animation__span 2s infinite;
    transform: rotate(180deg);
    -webkit-filter: blur(1px);
  }
  
  @keyframes reading-animation__span {
    0% {
      opacity: 0;
      transform: rotate(0deg);
      margin-top: -30px;
      height: 30px;
    }
  
    25% {
      opacity: 0.5;
      height: 15px;
      margin-top: -15px;
    }
  
    50% {
      opacity: 0;
      transform: rotate(0deg);
      margin-top: -5px;
      height: 5px;
    }
  
    51% {
      transform: rotate(180deg);
      margin-top: 3px;
      height: 30px;
    }
  
    75% {
      opacity: 0.5;
      height: 15px;
    }
  
    100% {
      opacity: 0;
      height: 5px;
    }
  }
  
  /* styles.css */

  
  .container {
    width:80vw;
    height: 90vh;
    background-color: rgba(255, 255, 255, 0.8);
    box-sizing: border-box;
    position: absolute;
    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    border-radius: 10px;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
    padding: 20px;
/*    overflow: hidden;*/
  }
  .fsr-header {
    display: flex;
    flex-flow: row;
    height: auto;
    padding: 10px;
    color: #3559E0;
    align-items: center;
    font-family: "Rubik Mono One", monospace;
    font-weight: 100;
    font-style: normal;
  }
  img {
    max-width: 100%;
    width: 60px;
    height: auto;
    background: #3559E0;
    padding: 10px;
    border-radius: 10px;
    margin-right: 10px ;

  }
  .fsr-body {
    padding: 10px;
    display: flex;
    flex-flow: row;
/*    background: #ffff;*/
    border-radius: 10px;
    justify-content: flex-start;
/*    align-items: center;*/
    height:86%;
    overflow: hidden;
/*    flex-wrap: no-wrap;*/
  }
  
  .form-wrapper {
/*    background: #ffff;*/
    padding: 10px;
    width: 50%;
/*    background: red;*/
  }
  .log-wrapper {
/*    background: #ffff;*/
    padding: 5px;
    width: 50%;
    height: 100%;
    display: flex;
    flex-flow: column;

  }
  .log-wrapper p {
    font-weight: bolder;
  }
  .log {
    height: 50%;
    background: #1D2B53;
    color: #79AC78;
    font-size: 12px;
    overflow-y: scroll;
    border-radius: 10px;
    padding: 10px;
  }
  .fsr-footer {
    color:#3559E0;
  }
  .fsr-footer a {
    text-decoration: none;
    color:#3559E0;
  }
  .form-group {
    display: flex;
    flex-flow: column;
    margin-bottom: 20px;
    font-weight: bold;
  }
  .form-check {
/*    background: red;*/
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-flow: row;
  }

  #runBtn {
    background: #3559E0;
    color: white;
    width: 100px;
    height: 40px;
    border-radius: 10px;
    border: none;
  }
  #stopBtn {
    background: #D04848;
    color: white;
    width: 100px;
    height: 40px;
    border-radius: 10px;
    border: none;
  }
  ::-webkit-scrollbar {
    width: 10px;
  }
  
  input, textarea, select {
      width: 100%; /* Full width */
      padding: 10px; /* Padding for spacing */
      margin: 5px 0; /* Margin for spacing */
      box-sizing: border-box; /* Include padding and border in element's total width and height */
      border: 1px solid #ccc; /* Border style */
      border-radius: 5px; /* Rounded corners */
      background-color: #fff; /* Background color */
      font-size: 16px; /* Font size */
      color: #333; /* Text color */
      transition: border-color 0.3s ease; /* Smooth transition for border color */
  }

